--- a/menu.html
+++ b/menu.html
@@ -2,8 +2,8 @@
 <!--
 Name: Clif Reichenborn
 Date Created: 8/20/2021
-Restaurant Site Part:3-Homepage
-Most recent revision:9/5/2021
+Restaurant Site Part:1-Menu page
+Most recent revision:
 -->
 <html>
 	<head>
@@ -12,9 +12,6 @@ Most recent revision:9/5/2021
 		</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, intitial-scale=1, shrink-to-fit=no">
-		<
-		<!--Bootstrap Icons-->
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 		<!--Google font Kaisei Decol-serif-->
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -75,7 +72,7 @@ Most recent revision:9/5/2021
 	<!--Navigation hub-->
 <br />
 	<nav>
-			<a class="btn badge-pill bi bi-house-fill" href="index.html"></a>
+			<a class="btn badge-pill" href="index.html">Home</a>
 			<a class="btn badge-pill" href="menu.html">Menu</a>
 			<a class="btn badge-pill" href="contact.html">Contact Me</a>
 	</nav>
@@ -83,9 +80,6 @@ Most recent revision:9/5/2021
 	
 	<!--Menu start-->
 <!--Breakfast table start-->
-<div class="container-fluid">
-	<div class="row">
-		<div class="col-md-8 mx-auto">
 <table>
 		 <caption>Down Well Diner Breakfast</caption>
 		 <thead>
@@ -116,13 +110,7 @@ Most recent revision:9/5/2021
 		</tbody>
 	</table>
 	<br />
-		</div>
-	</div>
-</div>
 	<!--Lunch table start-->
-<div class="container-fluid">
-	<div class="row">
-		<div class="col-md-8 mx-auto">
 	<table>
 		 <caption>Down Well Diner Lunch</caption>
 		 <thead>
@@ -151,14 +139,8 @@ Served with mashed potatoes, gravy & skillet green beans.</td>
 		</tr>
 		</tbody>
 	</table>
-			</div>
-	</div>
-</div>
 <br />
 <!--Beverages table start-->
-<div class="container-fluid">
-	<div class="row">
-		<div class="col-md-2 mx-auto">
 	<table>
 		 <caption>Beverages</caption>
 		 <thead>
@@ -187,9 +169,6 @@ Served with mashed potatoes, gravy & skillet green beans.</td>
 		</tr>
 		</tbody>
 	</table>
-		</div>
-	</div>
-</div>
 
 <hr />
 	<footer>
@@ -198,11 +177,9 @@ Served with mashed potatoes, gravy & skillet green beans.</td>
 	</footer>
 </main>
 
-
 <!--popper.js and jQuery frameworks-->
 	 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
-	
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 </html>
